# rs-auth

./: Cargo.toml  sqlite.db
migrations/2023-11-21-092938_create_users/: up.sql
src/: db.rs  main.rs  models.rs
src/routes/: auth.rs  mod.rs
