[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"] }
diesel = { version = "2.1.4", features = ["sqlite", "r2d2", "chrono"] }
bcrypt = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
r2d2 = "0.8.9"
rocket_sync_db_pools = { version = "0.1", features = ["diesel_sqlite_pool"] }
